Agregado el metodo de leerEntero